Mit Colab erstellt

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaaBiXU+bxwnecBFmNSLK5",
+      "authorship_tag": "ABX9TyNR1EATFOAx1eNGJ5niYjGU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3794,7 +3794,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Qfvys8hUc0FJ",
         "outputId": "402c3e1d-69a9-4c20-ed50-ff4a3ce74fa7",
@@ -4041,7 +4041,7 @@
       "metadata": {
         "id": "NbU_Zj4ndE2V"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4049,7 +4049,7 @@
       "source": [
         "dataset = load_dataset(\"mrjunos/depression-reddit-cleaned\")\n",
         "\n",
-        "set_seed(24)\n"
+        "set_seed(24)"
       ],
       "metadata": {
         "id": "hpQXiCzKdHtK",
@@ -4105,7 +4105,7 @@
           ]
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4219,7 +4219,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4244,7 +4244,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4276,13 +4276,13 @@
       "cell_type": "code",
       "source": [
         "# Model 1: Distill BERT cased\n",
-        "tokenizer = AutoTokenizer.from_pretrained(\"distilbert/distilbert-base-cased\")\n",
+        "tokenizer_distilbert = AutoTokenizer.from_pretrained(\"distilbert/distilbert-base-cased\")\n",
         "\n",
-        "def tokenize_function(examples):\n",
-        "    return tokenizer(examples[\"text\"], padding=True, truncation=True)\n",
+        "def tokenize_function_distilbert(examples):\n",
+        "    return tokenizer_distilbert(examples[\"text\"], padding=True, truncation=True)\n",
         "\n",
-        "small_tokenized_dataset = dataset_dict.map(tokenize_function, batched=True, batch_size=16)\n",
-        "data_collator = DataCollatorWithPadding(tokenizer=tokenizer)"
+        "small_tokenized_dataset_distilbert = dataset_dict.map(tokenize_function_distilbert, batched=True, batch_size=16)\n",
+        "data_collator = DataCollatorWithPadding(tokenizer=tokenizer_distilbert)"
       ],
       "metadata": {
         "id": "-FjAiAfAjM7b",
@@ -4371,7 +4371,7 @@
           ]
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4476,7 +4476,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(small_tokenized_dataset)"
+        "print(small_tokenized_dataset_distilbert)"
       ],
       "metadata": {
         "id": "4lBAEp1wkIAs",
@@ -4485,7 +4485,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4513,7 +4513,16 @@
       "cell_type": "code",
       "source": [
         "# Model 2: RoBERTa base\n",
-        "\n"
+        "tokenizer_roberta = AutoTokenizer.from_pretrained(\"roberta-base\")\n",
+        "\n",
+        "def tokenize_function_roberta(examples):\n",
+        "    return tokenizer_roberta(examples[\"text\"], padding=True, truncation=True)\n",
+        "\n",
+        "# Apply the tokenize function to the dataset\n",
+        "small_tokenized_dataset_roberta = dataset_dict.map(tokenize_function_roberta, batched=True, batch_size=16)\n",
+        "\n",
+        "# Create a data collator with padding\n",
+        "data_collator = DataCollatorWithPadding(tokenizer=tokenizer_roberta)"
       ],
       "metadata": {
         "id": "CgY6QGNPeFbm"
