Mit Colab erstellt

--- a/Kopie_von_Tutorial1.ipynb
+++ b/Kopie_von_Tutorial1.ipynb
@@ -261,7 +261,11 @@
     },
     {
       "metadata": {
-        "id": "5Oz_liBoEhTJ"
+        "id": "5Oz_liBoEhTJ",
+        "outputId": "a3a11290-2e51-4065-fa77-875fa99a03ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -270,8 +274,18 @@
         "print(\"squared = \", 11 ** 2)\n",
         "print(\"cubed = \", 11 ** 3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "remainder =  2\n",
+            "squared =  121\n",
+            "cubed =  1331\n"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
@@ -370,17 +384,22 @@
         "id": "ncW9hIRbEzZH",
         "collapsed": true,
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 162
         },
-        "outputId": "f7ac1dc2-032a-4251-a640-dbaa9a24a751"
+        "outputId": "dac87618-c957-47be-912b-3b59b1b47716"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "first1\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'first' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-205944dd461f>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcombination\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfirst\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcombination\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'first' is not defined"
           ]
         }
       ]
