Mit Colab erstellt

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1429,7 +1429,6 @@
       ],
       "metadata": {
         "id": "-FjAiAfAjM7b",
-        "outputId": "c591e05b-0257-409d-9859-9cb86e450edf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -1446,7 +1445,8 @@
             "6ec573c1cc5a4917aa5a40ff691fd406",
             "7d5f529770674460b722f99966d791f5"
           ]
-        }
+        },
+        "outputId": "c591e05b-0257-409d-9859-9cb86e450edf"
       },
       "execution_count": 5,
       "outputs": [
@@ -4009,11 +4009,13 @@
       "source": [
         "# trying testing with Trainer.evaluate() (less memory intensive):\n",
         "\n",
+        "# Load fine-tuned model\n",
         "fine_tuned_model_distilbert = AutoModelForSequenceClassification.from_pretrained(\"/content/drive/MyDrive/distilbert/checkpoint-165\")\n",
         "\n",
-        "fine_tuned_model_distilbert.config.output_hidden_states = True  # This makes sure hidden states are part of the output\n",
+        "# Ensure that the model is set to return hidden states during evaluation\n",
+        "fine_tuned_model_distilbert.config.output_hidden_states = True\n",
         "\n",
-        "# Disable W&B logging\n",
+        "# Disable W&B logging (we'll use the --report_to flag instead)\n",
         "os.environ[\"WANDB_DISABLED\"] = \"true\"\n",
         "\n",
         "# Create a new Trainer instance for evaluation\n",
@@ -4021,50 +4023,46 @@
         "    model=fine_tuned_model_distilbert,\n",
         "    eval_dataset=small_tokenized_dataset_distilbert[\"test\"],\n",
         "    compute_metrics=compute_metrics,\n",
+        "    args=TrainingArguments(\n",
+        "        output_dir=\"./results\",\n",
+        "        report_to=\"none\"  # Disable logging to W&B\n",
+        "    )\n",
         ")\n",
         "\n",
-        "# Evaluate the model\n",
+        "# Perform evaluation\n",
         "test_results = new_trainer.evaluate()\n",
         "print(test_results)\n",
         "\n",
+        "# Get predictions and labels\n",
+        "predictions, labels, metrics = new_trainer.predict(small_tokenized_dataset_distilbert[\"test\"])\n",
         "\n",
+        "# Inspect shapes of the predictions and labels\n",
+        "print(\"Predictions shape:\", predictions.shape)\n",
+        "print(\"Labels shape:\", labels.shape)\n",
         "\n",
-        "# Now, let's get the predictions and labels along with the hidden states:\n",
-        "# The trainer's `predict` function will automatically give predictions, labels, and metrics\n",
-        "predictions_output = new_trainer.predict(small_tokenized_dataset_distilbert[\"test\"])\n",
+        "# If predictions have multiple dimensions, we may need to extract logits or class indices\n",
+        "if len(predictions.shape) > 1:\n",
+        "    predicted_classes = torch.argmax(torch.tensor(predictions), dim=-1)\n",
+        "else:\n",
+        "    predicted_classes = predictions\n",
         "\n",
-        "# `predictions_output` is a `PredictionOutput` object containing:\n",
-        "# - predictions: The predicted logits (for classification, these are the raw logits)\n",
-        "# - label_ids: The true labels (ground truth)\n",
-        "# - metrics: Evaluation metrics (e.g., loss, accuracy)\n",
+        "# Handle the hidden states by checking the outputs and extracting them correctly\n",
+        "hidden_states = None\n",
+        "if 'hidden_states' in metrics:\n",
+        "    hidden_states = metrics['hidden_states']\n",
+        "else:\n",
+        "    print(\"No hidden states found in the output.\")\n",
         "\n",
-        "predictions = predictions_output.predictions\n",
-        "labels = predictions_output.label_ids\n",
-        "metrics = predictions_output.metrics  # Includes loss, accuracy, etc.\n",
+        "# Save the predictions, labels, and hidden states (if available)\n",
+        "torch.save(predicted_classes, \"/content/drive/MyDrive/predicted_classes.pt\")\n",
+        "torch.save(labels, \"/content/drive/MyDrive/labels.pt\")\n",
         "\n",
-        "# Extract hidden states (from the trainer's `eval_dataset`)\n",
-        "# Since Trainer does not return hidden states directly, we'll use the model output directly to get them\n",
-        "hidden_states = []\n",
-        "for batch in new_trainer.get_eval_dataloader():\n",
-        "    # Pass through the model to get the hidden states\n",
-        "    with torch.no_grad():\n",
-        "        outputs = fine_tuned_model_distilbert(**batch)\n",
-        "        hidden_states.append(outputs.hidden_states)  # Appending the hidden states for each batch\n",
+        "if hidden_states is not None:\n",
+        "    torch.save(hidden_states, \"/content/drive/MyDrive/hidden_states.pt\")\n",
+        "else:\n",
+        "    print(\"Hidden states not saved due to absence.\")\n",
         "\n",
-        "# Flatten the list of hidden states (since we iterate over batches)\n",
-        "hidden_states = torch.cat([torch.stack(hs) for hs in hidden_states], dim=0)\n",
-        "\n",
-        "# Save the predictions, labels, and hidden states to files\n",
-        "torch.save(predictions, \"/content/drive/MyDrive/visualisations_distilbert/predictions.pt\")\n",
-        "torch.save(labels, \"/content/drive/MyDrive/visualisations_distilbert/labels.pt\")\n",
-        "torch.save(hidden_states, \"/content/drive/MyDrive/visualisations_distilbert/hidden_states.pt\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "# Get the predicted class (most probable class)\n",
-        "predicted_classes = torch.argmax(torch.tensor(predictions), dim=-1)\n",
-        "\n",
-        "# Find wrongly classified samples\n",
+        "# Output the wrongly classified samples\n",
         "wrongly_classified = []\n",
         "for i in range(len(predicted_classes)):\n",
         "    if predicted_classes[i] != labels[i]:\n",
@@ -4081,29 +4079,18 @@
         "    print(f\"Predicted Label: {example['predicted_label']}\")\n",
         "    print(\"-\" * 100)\n",
         "\n",
-        "# Evaluate the model on the entire test set\n",
-        "test_results = new_trainer.evaluate()\n",
-        "print(test_results)\n",
-        "\n",
         "# This gives me results for best distilbert model from Drive."
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 476
+          "height": 402
         },
         "id": "fx9uVQtt4uAJ",
-        "outputId": "a94f2791-b1d4-4ff8-8cac-4ce7e27bdbf8"
+        "outputId": "5d70cde0-04b4-4cdb-a6b7-2e478ebed669"
       },
-      "execution_count": 17,
+      "execution_count": 21,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Using the `WANDB_DISABLED` environment variable is deprecated and will be removed in v5. Use the --report_to flag to control the integrations used for logging result (for instance --report_to none).\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -4129,7 +4116,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-41291770a376>\u001b[0m in \u001b[0;36m<cell line: 18>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m# Evaluate the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mtest_results\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_trainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_results\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-21-81e2ed312570>\u001b[0m in \u001b[0;36m<cell line: 24>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# Perform evaluation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mtest_results\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_trainer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_results\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/transformers/trainer.py\u001b[0m in \u001b[0;36mevaluate\u001b[0;34m(self, eval_dataset, ignore_keys, metric_key_prefix)\u001b[0m\n\u001b[1;32m   4048\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4049\u001b[0m         \u001b[0meval_loop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprediction_loop\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muse_legacy_prediction_loop\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluation_loop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4050\u001b[0;31m         output = eval_loop(\n\u001b[0m\u001b[1;32m   4051\u001b[0m             \u001b[0meval_dataloader\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4052\u001b[0m             \u001b[0mdescription\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Evaluation\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/transformers/trainer.py\u001b[0m in \u001b[0;36mevaluation_loop\u001b[0;34m(self, dataloader, description, prediction_loss_only, ignore_keys, metric_key_prefix)\u001b[0m\n\u001b[1;32m   4337\u001b[0m             \u001b[0meval_set_kwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"losses\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mall_losses\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;34m\"loss\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minclude_for_metrics\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4338\u001b[0m             \u001b[0meval_set_kwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"inputs\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mall_inputs\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;34m\"inputs\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minclude_for_metrics\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4339\u001b[0;31m             metrics = self.compute_metrics(\n\u001b[0m\u001b[1;32m   4340\u001b[0m                 \u001b[0mEvalPrediction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpredictions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mall_preds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_ids\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mall_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0meval_set_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4341\u001b[0m             )\n",
             "\u001b[0;32m<ipython-input-10-1601be9d0b9e>\u001b[0m in \u001b[0;36mcompute_metrics\u001b[0;34m(eval_pred)\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0;34m\"\"\"Called at the end of validation.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0mlogits\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m     \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;31m# Debugging: Print shapes and values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -4453,10 +4440,10 @@
       ],
       "metadata": {
         "id": "D15eVYQXdbX1",
-        "outputId": "562e476d-19cb-4885-c58f-68946007b152",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "562e476d-19cb-4885-c58f-68946007b152"
       },
       "execution_count": 12,
       "outputs": [
@@ -4619,7 +4606,8 @@
         "'''\n",
         "The code cell above uses all of my RAM so I need to use trainer.evaluate()\n",
         "to save the predictions. But I read online that trainer.evaluate()\n",
-        "is not great for saving hidden representations."
+        "is not great for saving hidden representations. \"because the model is not configured to output the\n",
+        "hidden states by default during inference when using the Trainer.\""
       ],
       "metadata": {
         "id": "RhzNXy2GPg8n"
