Mit Colab erstellt

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -4760,7 +4760,7 @@
         "  while example in range(len(outputs['hidden_states'][layer])):\n",
         "    sp_token_position = 0\n",
         "    for token in model_inputs['input_ids'][example]:\n",
-        "      if token != tokenizer_distilbert.pad_token_id and token != tokenizer_distilbert.cls_token_id: #changed this code here a bit\n",
+        "      if token != tokenizer_distilbert.pad_token_id and token != tokenizer_distilbert.cls_token_id: # changed this code here a bit\n",
         "        sp_token_position += 1\n",
         "      else:\n",
         "        tensor = outputs['hidden_states'][layer][example][sp_token_position]\n",
@@ -4772,7 +4772,7 @@
         "    example +=1\n",
         "\n",
         "  writer=SummaryWriter(path+'/layer_' + str(layer))\n",
-        "  writer.add_embedding(torch.stack(tensors), metadata=labels, metadata_header=['Text','Label'])\n",
+        "  writer.add_embedding(torch.stack(tensors), metadata=labels, metadata_header=['text','label']) # changed \"Text\" to \"text\" and \"Emotion\" to \"label\"\n",
         "\n",
         "  layer+=1"
       ],
@@ -4810,7 +4810,7 @@
         "  while example in range(len(outputs['hidden_states'][layer])):\n",
         "    sp_token_position = 0\n",
         "    for token in model_inputs['input_ids'][example]:\n",
-        "      if token != tokenizer_roberta.pad_token_id and token != tokenizer_roberta.cls_token_id: #changed this code here a bit\n",
+        "      if token != tokenizer_roberta.pad_token_id and token != tokenizer_roberta.cls_token_id: # changed this code here a bit\n",
         "        sp_token_position += 1\n",
         "      else:\n",
         "        tensor = outputs['hidden_states'][layer][example][sp_token_position]\n",
@@ -4822,7 +4822,7 @@
         "    example +=1\n",
         "\n",
         "  writer=SummaryWriter(path+'/layer_' + str(layer))\n",
-        "  writer.add_embedding(torch.stack(tensors), metadata=labels, metadata_header=['Text','Label'])\n",
+        "  writer.add_embedding(torch.stack(tensors), metadata=labels, metadata_header=['text','label']) # changed \"Text\" to \"text\" and \"Emotion\" to \"label\"\n",
         "\n",
         "  layer+=1"
       ],
