Mit Colab erstellt

--- a/Project_Lara_JAKL.ipynb
+++ b/Project_Lara_JAKL.ipynb
@@ -717,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Qfvys8hUc0FJ",
         "outputId": "27099d62-728f-4384-cb14-3bf4d8eaf1b5",
@@ -930,7 +930,7 @@
       "metadata": {
         "id": "NbU_Zj4ndE2V"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -947,7 +947,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1031,7 +1031,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1117,7 +1117,7 @@
         },
         "outputId": "66405071-23fd-46c1-df7c-de3b1d1af8bc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1207,7 +1207,7 @@
           ]
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1239,7 +1239,7 @@
         },
         "outputId": "681859d3-b039-4caf-a2c2-0649604ede25"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1263,7 +1263,7 @@
       "metadata": {
         "id": "8zmjixIHfCrb"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1280,7 +1280,7 @@
         "f1 = evaluate.load(\"f1\")\n",
         "\n",
         "arguments_distilbert = TrainingArguments(\n",
-        "    output_dir=\"distilbert2\",\n",
+        "    output_dir=\"distilbert\",\n",
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=8,\n",
         "    logging_steps=10,\n",
@@ -1337,7 +1337,7 @@
         },
         "outputId": "80ae3765-3438-45e2-b3e8-e2de3bafabc9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1562,7 +1562,7 @@
         "f1 = evaluate.load(\"f1\")\n",
         "\n",
         "arguments_roberta = TrainingArguments(\n",
-        "    output_dir=\"roberta2\",\n",
+        "    output_dir=\"roberta\",\n",
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=8,\n",
         "    logging_steps=10,\n",
@@ -1619,7 +1619,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1966,7 +1966,7 @@
       "metadata": {
         "id": "HcBAgLad57OQ"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2027,7 +2027,7 @@
         },
         "outputId": "8b277876-7b58-44fb-cd79-10492f6ff351"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2167,7 +2167,7 @@
         },
         "outputId": "0ebe9ccd-57fd-4c58-ee16-5f8c93aedc8f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2238,15 +2238,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Igl8DyU34au_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# Visualisations:\n",
         "\n",
@@ -2260,7 +2251,7 @@
         },
         "outputId": "8ca59d07-5a98-408d-c2af-744b771d32f8"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2369,7 +2360,7 @@
       "metadata": {
         "id": "TC6p7GH6eDZM"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2380,7 +2371,7 @@
         "'''\n",
         "This is the code cell where I run into the RAM issue. (and the one below for RoBERTa should be similar)\n",
         "'''\n",
-        "# The following code saves the hidden states of all samples in the test set of all layers of this DistilBERT checkpoint:\n",
+        "# The following code saves the hidden states of 50 samples in the test set of all layers of this DistilBERT checkpoint:\n",
         "\n",
         "# Load model:\n",
         "fine_tuned_model_distilbert = AutoModelForSequenceClassification.from_pretrained(\"/content/drive/MyDrive/distilbert/checkpoint-165\")\n",
@@ -2397,7 +2388,7 @@
         "id": "yIvfdipKuwmB",
         "outputId": "4d390984-48c9-4523-9af9-98e42369074f"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2423,7 +2414,7 @@
       "metadata": {
         "id": "Et_29IT7YSLm"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2467,7 +2458,7 @@
       "metadata": {
         "id": "ZalPaDcTfa5v"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2482,13 +2473,13 @@
       "metadata": {
         "id": "EjSSujNRYbDO"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# The following code saves the hidden states of all samples in the test set of all layers of this RoBERTa checkpoint:\n",
+        "# The following code saves the hidden states of 50 samples in the test set of all layers of this RoBERTa checkpoint:\n",
         "\n",
         "path = \"results_vis_roberta\" # creates directory, can change it to drive location\n",
         "layer=0 # sets layer i want to start from\n",
@@ -2525,7 +2516,7 @@
       "metadata": {
         "id": "lFkW9TnsbZrz"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     }
   ]
